# alphacore_cdh

./: .gitignore  pyproject.toml  testfile.parquet
alphacore_cdh/: config.py  main.py  mainv2.py
alphacore_cdh/services/: alphacore.py  azure_keyvault.py
configuration/: configuration_default.yml
